[tool.poetry]
name = "foo"
version = "0.1.0"
description = "poetry project of python"
authors = ["刘晓辉 <xhliu@dfocuspace.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.3"
flask = "^1.1.2"
aiohttp = "^3.6.2"
jinja2 = "^2.11.2"
aiomysql = "^0.0.20"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
